--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,16 +1,36 @@
 @media screen and (max-width: 1400px) {
-    #profile {
-      height: 83vh;
+  #contact,#profile {
+      height: auto;
       margin-bottom: 6rem;
     }
     .about-containers {
       flex-wrap: wrap;
     }
-    #contact,
-    #projects {
-      height: fit-content;
+    
+    #projects .about-containers {
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
     }
+    .project-sub-title {
+      color: black;
+      font-weight: 600;
+      font-size: .9rem;
+      margin-bottom: 2rem;
   }
+  #projects .experience-details-container .about-containers .details-container {
+    padding: 1.5rem;
+    flex: none;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center;
+    transition: 400ms;
+    cursor: pointer;
+   
+  }
+}
   
   @media screen and (max-width: 1200px) {
     #desktop-nav {
